# py-dependency-injection

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  Pipfile  README.md  env.make.sample  pyproject.toml  setup.py
.github/actions/: unittests.yml
.github/actions/unittests/: action.yml
.github/workflows/: feature.yml  job_unittests.yml  master.yml  run-unittests.yml  shared.yml
docs/: concepts.rst  conf.py  examples.rst  gettingstarted.rst  index.rst  releases.rst  requirements-dev.txt  requirements.txt  userguide.rst  versionhistory.rst
docs/_build/doctrees/: community.doctree  environment.pickle  gettingstarted.doctree  index.doctree  py-modindex.doctree  versionhistory.doctree
docs/_build/doctrees/modules/: container.doctree  scope.doctree
docs/_build/html/: .buildinfo  community.html  genindex.html  gettingstarted.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  versionhistory.html
docs/_build/html/_sources/modules/: container.rst.txt
docs/_build/html/modules/: container.html  scope.html
docs/_static/: custom.css
docs/_templates/: layout.html
docs/modules/: decorator.rst  scope.rst
scripts/: sync_version.py  test_installed_package.py
src/dependency_injection/: __init__.py  container.py  decorator.py  registration.py  scope.py  serialization.py
src/dependency_injection/container/: container.py  registration.py
src/dependency_injection/tags/: all_tagged.py  any_tagged.py  tagged.py
src/dependency_injection/utils/: singleton_meta.py
tests/unit_test/: car.py  test_case.py
tests/unit_test/container/configure/: test_configure_default_container.py  test_configure_default_scope.py
tests/unit_test/container/lifecycle/: test_clear_instances.py
tests/unit_test/container/obtain/: test_obtain_container.py
tests/unit_test/container/register/: test_deprecations.py  test_get_registrations.py  test_register_factory.py  test_register_instance.py  test_register_scoped.py  test_register_singleton.py  test_register_transient.py  test_register_with_args.py  test_set_registrations.py
tests/unit_test/container/resolve/: test_deprecations.py  test_resolve_all.py  test_resolve_factory.py  test_resolve_instance.py  test_resolve_missing_dependency.py  test_resolve_scoped.py  test_resolve_singleton.py  test_resolve_transient.py  test_resolve_with_alias.py  test_resolve_with_args.py  test_resolve_with_default_values.py  test_resolve_with_injection.py  test_resolve_with_optionals.py
tests/unit_test/decorator/: test_decorator.py
tests/unit_test/serialization/: test_registration_serializer.py
