[project]
name = "py-dependency-injection"
version = "1.0.0-rc.2"
description = "A dependency injection library for Python - inspired by ASP.NET Core."
authors = [
    {name = "David Runemalm",email = "david.runemalm@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/runemalm/py-dependency-injection"
homepage = "https://py-dependency-injection.readthedocs.io/en/latest/"
documentation = "https://py-dependency-injection.readthedocs.io/en/latest/"
keywords = ["dependency injection", "di", "ioc", "inversion of control", "python"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [

]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "*"
build = "*"
flake8 = "*"
pre-commit = "*"
pytest = "*"
setuptools = "*"
wheel = "*"

[tool.poetry]
packages = [
    { include = "dependency_injection", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
